--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,37 @@ group 'chihz'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: "findbugs"
+apply plugin: "jacoco"
+
+
+findbugs {
+    toolVersion = "3.0.1"
+    sourceSets = [sourceSets.main]
+    ignoreFailures = true
+    reportsDir = file("$project.buildDir/findbugsReports")
+    effort = "max"
+    reportLevel = "high"
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled false
+        html.enabled true
+    }
+}
+
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination "${buildDir}/jacocoHtml"
+    }
+}
 
 sourceCompatibility = 1.8
 
