--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: "findbugs"
 apply plugin: "jacoco"
+apply plugin: 'application'
 
 
 findbugs {
@@ -45,3 +46,5 @@ dependencies {
     compile "com.sparkjava:spark-core:2.5"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+mainClassName = "chihz.bot.elder.API"
