--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: java
+language: java python
 jdk: oraclejdk8
+python:
+  - "3.5"
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -11,6 +13,8 @@ install:
   - gradle assemble
 script:
   - gradle build
+after_script:
+  - python ci/travis_collector.py
 notifications:
   email:
     recipients:
