--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: java
 jdk: oraclejdk8
 before_install:
-  - sudo add-apt-repository ppa:fkrull/deadsnakes
-  - sudo apt-get update
-  - sudo apt-get install python3.5
+  - python -m this
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
