--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ repositories {
 dependencies {
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.17'
     compile "com.sparkjava:spark-core:2.5"
+    compile "com.lmax:disruptor:3.3.6"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
